--- a/jackets.html
+++ b/jackets.html
@@ -190,71 +190,240 @@
     <div class="page_banner">
       <div class="container">
         <a href="index.html">Home</a>
-        <span>Terms & Conditions</span>
+        <a href="#">men</a>
+        <span>Jackets</span>
       </div>
     </div>
 
-    <!-- Page Content -->
-    <div class="page_content">
+    <!-- Product -->
+    <div class="product product_list section_gap">
       <div class="container">
-        <div class="page_content_box">
-          <h1 class="md_heading">Terms & Conditions</h1>
-          <p>
-            These terms and conditions govern your use of Chroma Apparel’s website and all orders, purchases, and transactions made through the
-            website. By accessing or using the website, you agree to be bound by these terms and conditions. If you do not agree to these terms and
-            conditions, you may not use the website or make any purchases from Chroma Apparel.
-          </p>
+        <div class="section_title">
+          <h1 class="md_heading">Jackets</h1>
+          <div class="section_title_right">
+            <a href="javascript:void(0)" class="filter">Filter</a>
+            <form class="filter_box">
+              <div class="color_box">
+                <h1 class="sm_heading">Colour</h1>
+                <div class="color_box_values">
+                  <label for="black"><input type="checkbox" name="black" /> Black</label>
+                  <label for="white"><input type="checkbox" name="white" /> White</label>
+                  <label for="blue"><input type="checkbox" name="blue" /> Blue</label>
+                  <label for="tan"><input type="checkbox" name="tan" /> Tan</label>
+                  <label for="beige"><input type="checkbox" name="beige" /> Beige</label>
+                  <label for="olive"><input type="checkbox" name="olive" /> Olive</label>
+                </div>
+              </div>
+              <div class="color_box">
+                <h1 class="sm_heading">Size</h1>
+                <div class="color_box_values">
+                  <label for="xs"><input type="checkbox" name="xs" /> XS</label>
+                  <label for="s"><input type="checkbox" name="s" /> S</label>
+                  <label for="m"><input type="checkbox" name="m" /> M</label>
+                  <label for="l"><input type="checkbox" name="l" /> L</label>
+                  <label for="xl"><input type="checkbox" name="xl" /> XL</label>
+                  <label for="xxl"><input type="checkbox" name="xxl" /> XXL</label>
+                </div>
+              </div>
+              <div class="color_box">
+                <h1 class="sm_heading">Fit</h1>
+                <div class="color_box_values">
+                  <label for="fitted"><input type="checkbox" name="fitted" /> Fitted</label>
+                  <label for="oversized"><input type="checkbox" name="oversized" /> Oversized</label>
+                  <label for="cropped"><input type="checkbox" name="cropped" /> Cropped</label>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="page_content_box">
-          <h1 class="md_heading">Orders and Purchases</h1>
-          <p>
-            By placing an order or making a purchase through the website, you are offering to buy products or services from Chroma Apparel. All orders
-            are subject to availability and confirmation of the order price. Chroma Apparel reserves the right to refuse or cancel any order for any
-            reason at any time, including but not limited to product availability, errors in product or pricing information, or suspected fraudulent
-            activity.
-          </p>
-        </div>
-        <div class="page_content_box">
-          <h1 class="md_heading">Payment and Pricing</h1>
-          <p>
-            Chroma Apparel ships to locations within Nepal and internationally. Shipping costs will be calculated and displayed at checkout. Delivery
-            times may vary depending on your location and the shipping method selected. Chroma Apparel is not responsible for any delays or damages
-            caused by shipping carriers.
-          </p>
-        </div>
-        <div class="page_content_box">
-          <h1 class="md_heading">Shipping and Delivery</h1>
-          <p>
-            We take reasonable measures to protect your personal information from unauthorized access, disclosure, or destruction. However, no data
-            transmission over the internet or electronic storage is completely secure, so we cannot guarantee the security of your personal
-            information.
-          </p>
-        </div>
-        <div class="page_content_box">
-          <h1 class="md_heading">Return and Exchanges</h1>
-          <p>
-            Chroma Apparel accepts returns and exchanges of products within 7 days of delivery. Products must be in their original condition and
-            packaging, with all tags and labels attached. To initiate a return or exchange, please contact Chroma Apparel’s customer service team at
-            <a href="mailto: support@chromaapparel.com" class="mail_id"> support@chromaapparel.com</a> with your order number and reason for return or
-            exchange.
-          </p>
-        </div>
-        <div class="page_content_box">
-          <h1 class="md_heading">Prohibited Activities</h1>
-          <p>The following activities are prohibited on Chroma Apparel’s website:</p>
-          <ol>
-            <li>Violating any applicable laws, regulations, or third-party rights;</li>
-            <li>Uploading or distributing any material that infringes on any intellectual property rights or privacy rights;</li>
-            <li>Using the website to conduct fraudulent or illegal activities;</li>
-            <li>
-              Interfering with the website’s security or performance, including but not limited to attempting to access unauthorized areas of the
-              website or introducing viruses or other harmful code;
-            </li>
-            <li>Misrepresenting yourself or your affiliation with any other person or entity;</li>
-            <li>Using the website to send unsolicited messages, promotions, or advertisements;</li>
-            <li>Harassing or threatening any other users of the website or Chroma Apparel’s employees or representatives;</li>
-            <li>Engaging in any activity that may harm or interfere with the website or Chroma Apparel’s business or reputation.</li>
-          </ol>
+        <div class="row">
+          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+            <div class="product_item">
+              <a href="#" class="product_item_image">
+                <img src="./assets/img/Jackets/01.webp" alt="" />
+
+                <div class="hover_effect">
+                  <button class="cart_box">
+                    <i class="fas fa-shopping-cart"></i>
+                  </button>
+                  <button class="view">
+                    <i class="fas fa-eye"></i>
+                  </button>
+                  <button class="wish">
+                    <i class="fas fa-heart"></i>
+                  </button>
+                </div>
+              </a>
+              <div class="product_item_brief">
+                <h1 class="sm_heading"><span class="brand">Chroma</span> Tie-Dye Tee</h1>
+                <div class="color_row">
+                  <a href="#">Black</a>
+                  <a href="#">White</a>
+                  <a href="#">Tan</a>
+                </div>
+                <div class="price_row">
+                  <span class="price">1100</span>
+                  <del class="price">1500</del>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+            <div class="product_item">
+              <a href="#" class="product_item_image">
+                <img src="./assets/img/Jackets/02.webp" alt="" />
+
+                <div class="hover_effect">
+                  <button class="cart_box">
+                    <i class="fas fa-shopping-cart"></i>
+                  </button>
+                  <button class="view">
+                    <i class="fas fa-eye"></i>
+                  </button>
+                  <button class="wish">
+                    <i class="fas fa-heart"></i>
+                  </button>
+                </div>
+              </a>
+              <div class="product_item_brief">
+                <h1 class="sm_heading"><span class="brand">Chroma</span> Heavy Sweatpants</h1>
+                <div class="color_row">
+                  <a href="#">Black</a>
+                  <a href="#">White</a>
+                  <a href="#">Tan</a>
+                </div>
+                <div class="price_row">
+                  <span class="price">1300</span>
+                  <!-- <del class="price">1500</del> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+            <div class="product_item">
+              <a href="#" class="product_item_image">
+                <img src="./assets/img/Jackets/03.webp" alt="" />
+
+                <div class="hover_effect">
+                  <button class="cart_box">
+                    <i class="fas fa-shopping-cart"></i>
+                  </button>
+                  <button class="view">
+                    <i class="fas fa-eye"></i>
+                  </button>
+                  <button class="wish">
+                    <i class="fas fa-heart"></i>
+                  </button>
+                </div>
+              </a>
+              <div class="product_item_brief">
+                <h1 class="sm_heading"><span class="brand">Chroma</span> Camp Shirt</h1>
+                <div class="color_row">
+                  <a href="#">Black</a>
+                  <a href="#">White</a>
+                  <a href="#">Grey</a>
+                  <a href="#">Red</a>
+                </div>
+                <div class="price_row">
+                  <span class="price">1900</span>
+                  <!-- <del class="price">1500</del> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+            <div class="product_item">
+              <a href="#" class="product_item_image">
+                <img src="./assets/img/Jackets/04.webp" alt="" />
+
+                <div class="hover_effect">
+                  <button class="cart_box">
+                    <i class="fas fa-shopping-cart"></i>
+                  </button>
+                  <button class="view">
+                    <i class="fas fa-eye"></i>
+                  </button>
+                  <button class="wish">
+                    <i class="fas fa-heart"></i>
+                  </button>
+                </div>
+              </a>
+              <div class="product_item_brief">
+                <h1 class="sm_heading"><span class="brand">Chroma</span> Tie-Dye Tee</h1>
+                <div class="color_row">
+                  <a href="#">Black</a>
+                  <a href="#">White</a>
+                  <a href="#">Tan</a>
+                </div>
+                <div class="price_row">
+                  <span class="price">1700</span>
+                  <del class="price">2200</del>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+            <div class="product_item">
+              <a href="#" class="product_item_image">
+                <img src="./assets/img/Jackets/05.webp" alt="" />
+
+                <div class="hover_effect">
+                  <button class="cart_box">
+                    <i class="fas fa-shopping-cart"></i>
+                  </button>
+                  <button class="view">
+                    <i class="fas fa-eye"></i>
+                  </button>
+                  <button class="wish">
+                    <i class="fas fa-heart"></i>
+                  </button>
+                </div>
+              </a>
+              <div class="product_item_brief">
+                <h1 class="sm_heading"><span class="brand">Chroma</span> Tie-Dye Tee</h1>
+                <div class="color_row">
+                  <a href="#">Black</a>
+                  <a href="#">White</a>
+                  <a href="#">Tan</a>
+                </div>
+                <div class="price_row">
+                  <span class="price">1100</span>
+                  <del class="price">1500</del>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+            <div class="product_item">
+              <a href="#" class="product_item_image">
+                <img src="./assets/img/Jackets/06.webp" alt="" />
+
+                <div class="hover_effect">
+                  <button class="cart_box">
+                    <i class="fas fa-shopping-cart"></i>
+                  </button>
+                  <button class="view">
+                    <i class="fas fa-eye"></i>
+                  </button>
+                  <button class="wish">
+                    <i class="fas fa-heart"></i>
+                  </button>
+                </div>
+              </a>
+              <div class="product_item_brief">
+                <h1 class="sm_heading"><span class="brand">Chroma</span> Heavy Sweatpants</h1>
+                <div class="color_row">
+                  <a href="#">Black</a>
+                  <a href="#">White</a>
+                  <a href="#">Tan</a>
+                </div>
+                <div class="price_row">
+                  <span class="price">1300</span>
+                  <!-- <del class="price">1500</del> -->
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
