--- a/product_list.html
+++ b/product_list.html
@@ -56,22 +56,22 @@
                     <h1 class="sm_heading">Top</h1>
                     <ul>
                       <li><a href="product_list.html">T-shirt</a></li>
-                      <li><a href="product_list.html">Shirts</a></li>
-                      <li><a href="product_list.html">Sweatshits</a></li>
+                      <li><a href="shirts.html">Shirts</a></li>
+                      <li><a href="sweatShirt.html">Sweatshits</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="product_list.html">Sweatpants</a></li>
-                      <li><a href="product_list.html">shorts</a></li>
-                      <li><a href="product_list.html">pants</a></li>
+                      <li><a href="sweatPants.html">Sweatpants</a></li>
+                      <li><a href="shorts.html">shorts</a></li>
+                      <li><a href="pants.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                       <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
@@ -92,22 +92,22 @@
                     <h1 class="sm_heading">Top</h1>
                     <ul>
                       <li><a href="product_list.html">T-shirt</a></li>
-                      <li><a href="product_list.html">Shirts</a></li>
-                      <li><a href="product_list.html">Sweatshits</a></li>
+                      <li><a href="shirts.html">Shirts</a></li>
+                      <li><a href="sweatShirt.html">Sweatshits</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="product_list.html">Sweatpants</a></li>
-                      <li><a href="product_list.html">shorts</a></li>
-                      <li><a href="product_list.html">pants</a></li>
+                      <li><a href="sweatPants.html">Sweatpants</a></li>
+                      <li><a href="shorts.html">shorts</a></li>
+                      <li><a href="pants.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                       <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
@@ -127,23 +127,23 @@
                     <h1 class="sm_heading">Men</h1>
                     <ul>
                       <li><a href="product_list.html">T-shirt</a></li>
-                      <li><a href="product_list.html">Shirts</a></li>
-                      <li><a href="product_list.html">Sweatshits</a></li>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="shirts.html">Shirts</a></li>
+                      <li><a href="sweatShirt.html">Sweatshits</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="product_list.html">Sweatpants</a></li>
+                      <li><a href="sweatPants.html">Sweatpants</a></li>
                       <li><a href="product_list.html">T-shirts</a></li>
-                      <li><a href="product_list.html">pants</a></li>
+                      <li><a href="pants.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                       <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
@@ -420,100 +420,6 @@
                 <div class="price_row">
                   <span class="price">1300</span>
                   <!-- <del class="price">1500</del> -->
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-            <div class="product_item">
-              <a href="#" class="product_item_image">
-                <img src="./assets/img/list/07.png" alt="" />
-
-                <div class="hover_effect">
-                  <button class="cart_box">
-                    <i class="fas fa-shopping-cart"></i>
-                  </button>
-                  <button class="view">
-                    <i class="fas fa-eye"></i>
-                  </button>
-                  <button class="wish">
-                    <i class="fas fa-heart"></i>
-                  </button>
-                </div>
-              </a>
-              <div class="product_item_brief">
-                <h1 class="sm_heading"><span class="brand">Chroma</span> Camp Shirt</h1>
-                <div class="color_row">
-                  <a href="#">Black</a>
-                  <a href="#">White</a>
-                  <a href="#">Grey</a>
-                  <a href="#">Red</a>
-                </div>
-                <div class="price_row">
-                  <span class="price">1900</span>
-                  <!-- <del class="price">1500</del> -->
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-            <div class="product_item">
-              <a href="#" class="product_item_image">
-                <img src="./assets/img/list/08.png" alt="" />
-
-                <div class="hover_effect">
-                  <button class="cart_box">
-                    <i class="fas fa-shopping-cart"></i>
-                  </button>
-                  <button class="view">
-                    <i class="fas fa-eye"></i>
-                  </button>
-                  <button class="wish">
-                    <i class="fas fa-heart"></i>
-                  </button>
-                </div>
-              </a>
-              <div class="product_item_brief">
-                <h1 class="sm_heading"><span class="brand">Chroma</span> Tie-Dye Tee</h1>
-                <div class="color_row">
-                  <a href="#">Black</a>
-                  <a href="#">White</a>
-                  <a href="#">Tan</a>
-                </div>
-                <div class="price_row">
-                  <span class="price">1700</span>
-                  <del class="price">2200</del>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-            <div class="product_item">
-              <a href="#" class="product_item_image">
-                <img src="./assets/img/list/09.png" alt="" />
-
-                <div class="hover_effect">
-                  <button class="cart_box">
-                    <i class="fas fa-shopping-cart"></i>
-                  </button>
-                  <button class="view">
-                    <i class="fas fa-eye"></i>
-                  </button>
-                  <button class="wish">
-                    <i class="fas fa-heart"></i>
-                  </button>
-                </div>
-              </a>
-              <div class="product_item_brief">
-                <h1 class="sm_heading"><span class="brand">Chroma</span> Tie-Dye Tee</h1>
-                <div class="color_row">
-                  <a href="#">Black</a>
-                  <a href="#">White</a>
-                  <a href="#">Tan</a>
-                </div>
-                <div class="price_row">
-                  <span class="price">1700</span>
-                  <del class="price">2200</del>
                 </div>
               </div>
             </div>
