--- a/faq.html
+++ b/faq.html
@@ -56,22 +56,22 @@
                     <h1 class="sm_heading">Top</h1>
                     <ul>
                       <li><a href="product_list.html">T-shirt</a></li>
-                      <li><a href="product_list.html">Shirts</a></li>
-                      <li><a href="product_list.html">Sweatshits</a></li>
+                      <li><a href="shirts.html">Shirts</a></li>
+                      <li><a href="sweatShirt.html">Sweatshits</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="product_list.html">Sweatpants</a></li>
-                      <li><a href="product_list.html">shorts</a></li>
-                      <li><a href="product_list.html">pants</a></li>
+                      <li><a href="sweatPants.html">Sweatpants</a></li>
+                      <li><a href="shorts.html">shorts</a></li>
+                      <li><a href="pants.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                       <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
@@ -92,22 +92,22 @@
                     <h1 class="sm_heading">Top</h1>
                     <ul>
                       <li><a href="product_list.html">T-shirt</a></li>
-                      <li><a href="product_list.html">Shirts</a></li>
-                      <li><a href="product_list.html">Sweatshits</a></li>
+                      <li><a href="shirts.html">Shirts</a></li>
+                      <li><a href="sweatShirt.html">Sweatshits</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="product_list.html">Sweatpants</a></li>
-                      <li><a href="product_list.html">shorts</a></li>
-                      <li><a href="product_list.html">pants</a></li>
+                      <li><a href="sweatPants.html">Sweatpants</a></li>
+                      <li><a href="shorts.html">shorts</a></li>
+                      <li><a href="pants.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                       <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
@@ -127,23 +127,23 @@
                     <h1 class="sm_heading">Men</h1>
                     <ul>
                       <li><a href="product_list.html">T-shirt</a></li>
-                      <li><a href="product_list.html">Shirts</a></li>
-                      <li><a href="product_list.html">Sweatshits</a></li>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="shirts.html">Shirts</a></li>
+                      <li><a href="sweatShirt.html">Sweatshits</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="product_list.html">Sweatpants</a></li>
+                      <li><a href="sweatPants.html">Sweatpants</a></li>
                       <li><a href="product_list.html">T-shirts</a></li>
-                      <li><a href="product_list.html">pants</a></li>
+                      <li><a href="pants.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                       <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
@@ -211,16 +211,14 @@
                 aria-expanded="true"
                 aria-controls="collapseOne"
               >
-                Details
+                What is your return policy?
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <p>
-                  This is the first item's accordion body. It is shown by default, until the collapse plugin adds the appropriate classes that we use
-                  to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                  modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go
-                  within the , though the transition does limit overflow.
+                  Our return policy allows you to return any purchased item without any damages of wear and tear within 7 days for a full refund or
+                  exchange.
                 </p>
               </div>
             </div>
@@ -235,16 +233,14 @@
                 aria-expanded="false"
                 aria-controls="collapseTwo"
               >
-                Shipping Policy
+                How do I know what size to order?
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <p>
-                  This is the first item's accordion body. It is shown by default, until the collapse plugin adds the appropriate classes that we use
-                  to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                  modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go
-                  within the , though the transition does limit overflow.
+                  We have a sizing chart on each of the product's page to help you find the proper fit. If there are some more questions, please
+                  contact our customer service or reach via email.
                 </p>
               </div>
             </div>
@@ -259,16 +255,77 @@
                 aria-expanded="false"
                 aria-controls="collapseThree"
               >
-                Share
+                What payment methods do you offer and accept?
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
               <div class="accordion-body">
+                <p>We accept both E-Sewa and Cash on Delivery for now.</p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFour">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseFour"
+                aria-expanded="false"
+                aria-controls="collapseFour"
+              >
+                How can I track my order?
+              </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
                 <p>
-                  This is the first item's accordion body. It is shown by default, until the collapse plugin adds the appropriate classes that we use
-                  to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                  modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go
-                  within the , though the transition does limit overflow.
+                  Once the order has been shipped, you will be notified with a tracking number via email by which you can use it online to track your
+                  order.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFive">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseFive"
+                aria-expanded="false"
+                aria-controls="collapseFive"
+              >
+                Do you offer free shipping?
+              </button>
+            </h2>
+            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <p>
+                  Yes, we do offer free shipping on all the orders inside the valley but additional charges are applied if the delivery is out the
+                  valley?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingSix">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseSix"
+                aria-expanded="false"
+                aria-controls="collapseSix"
+              >
+                How often do you restock items?
+              </button>
+            </h2>
+            <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <p>
+                  We do restock items on a monthly basis but our availability may vary due to a product's demand. Sign up to your email newsletter to
+                  be notified of new arrivals and restocks.
                 </p>
               </div>
             </div>
