--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
                     <h1 class="sm_heading">Top</h1>
                     <ul>
                       <li><a href="product_list.html">T-shirt</a></li>
-                      <li><a href="product_list.html">Shirts</a></li>
-                      <li><a href="product_list.html">Sweatshits</a></li>
+                      <li><a href="shirts.html">Shirts</a></li>
+                      <li><a href="sweatShirt.html">Sweatshits</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="product_list.html">Sweatpants</a></li>
-                      <li><a href="product_list.html">shorts</a></li>
-                      <li><a href="product_list.html">pants</a></li>
+                      <li><a href="sweatPants.html">Sweatpants</a></li>
+                      <li><a href="shorts.html">shorts</a></li>
+                      <li><a href="pants.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                       <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
@@ -92,22 +92,22 @@
                     <h1 class="sm_heading">Top</h1>
                     <ul>
                       <li><a href="product_list.html">T-shirt</a></li>
-                      <li><a href="product_list.html">Shirts</a></li>
-                      <li><a href="product_list.html">Sweatshits</a></li>
+                      <li><a href="shirts.html">Shirts</a></li>
+                      <li><a href="sweatShirt.html">Sweatshits</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="product_list.html">Sweatpants</a></li>
-                      <li><a href="product_list.html">shorts</a></li>
-                      <li><a href="product_list.html">pants</a></li>
+                      <li><a href="sweatPants.html">Sweatpants</a></li>
+                      <li><a href="shorts.html">shorts</a></li>
+                      <li><a href="pants.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                       <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
@@ -127,23 +127,23 @@
                     <h1 class="sm_heading">Men</h1>
                     <ul>
                       <li><a href="product_list.html">T-shirt</a></li>
-                      <li><a href="product_list.html">Shirts</a></li>
-                      <li><a href="product_list.html">Sweatshits</a></li>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="shirts.html">Shirts</a></li>
+                      <li><a href="sweatShirt.html">Sweatshits</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="product_list.html">Sweatpants</a></li>
+                      <li><a href="sweatPants.html">Sweatpants</a></li>
                       <li><a href="product_list.html">T-shirts</a></li>
-                      <li><a href="product_list.html">pants</a></li>
+                      <li><a href="pants.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="jackets.html">Jackets</a></li>
                       <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
